--- a/views/stock-detail.ejs
+++ b/views/stock-detail.ejs
@@ -1,5 +1,27 @@
 <%- include('partials/header') %>
 
+<style>
+  #chartTabContent .btn.active{
+    background-color: #055361;
+    border-color: #055361;
+
+  }
+  #chartTabs .nav-link:not(.active) {
+    color: white;
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+
+}
+#chartTabs .nav-link.active {
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+    
+}
+
+
+
+</style>
+
 <div class="container">
   <div class="row mb-4">
     <div class="col-md-12">
