--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        .navbar-logo {
+            height: 40px; /* Increased from previous 30px */
+            width: auto;
+            margin-right: 15px; /* More spacing if needed */
+        }
+    </style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +18,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-    
+    <link rel="icon" type="image/png" href="/favicon-32x32.png">
+
 </head>
 <body>
     <header class="text-white py-3 navbar-custom ">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
-                <a href="/" class="text-white text-decoration-none">
+                <a href="/" class="text-white text-decoration-none d-flex align-items-center">
+                    <img src="/money.png" alt="FlowFin Logo" class="navbar-logo">
                     <h1 class="h4 m-0 nav-heading">FlowFin</h1>
                 </a>
                 <nav>
