--- a/views/home.ejs
+++ b/views/home.ejs
@@ -117,7 +117,7 @@
         transform: translateX(-50%);
         width: 80px;
         height: 4px;
-        background: linear-gradient(90deg, #6c63ff, #ff6584);
+        background: #055361;
         border-radius: 2px;
     }
 
@@ -168,13 +168,18 @@
         justify-content: center;
         border-radius: 50%;
         background-color: #f8f9fa;
-        color: #6c63ff;
+        color: #055361;
         font-size: 1.6rem;
         transition: all 0.3s ease;
+        text-align: center;
+    }
+
+    .feature-icon i{
+        margin: 0;
     }
 
     .feature-card:hover .feature-icon {
-        background-color: #6c63ff;
+        background-color: #055361;
         color: white;
         transform: rotateY(180deg);
     }
