--- a/views/stock-detail.ejs
+++ b/views/stock-detail.ejs
@@ -80,7 +80,7 @@
             </div>
             
             <div class="col-md-6">
-              <div class="row">
+              <div class="row flex-grow-1">
                 <div class="col-md-6">
                   <p class="mb-1">Previous Close: <strong>₹<%= quote.regularMarketPreviousClose.toFixed(2) %></strong></p>
                   <p class="mb-1">Open: <strong>₹<%= quote.regularMarketOpen.toFixed(2) %></strong></p>
